--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  html {
+    @apply bg-white dark:bg-gray-900;
+  }
+  body {
+    @apply bg-white dark:bg-gray-900 text-black dark:text-white;
+  }
+}
+
+html,
+body {
+  overscroll-behavior: none;
+}
